scripts/helm/prometheus/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # REMOVA backend-protocol (usa HTTP internamente)
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"  # Adicione para evitar 502
spec:
  tls:
    - hosts:
        - grafana.high.sh
      secretName: high-domain-secret
  ingressClassName: nginx
  rules:
  - host: "grafana.high.sh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80  # Mantenha 80 (HTTP)
